(images) Fix elongated IOTD/Staging area badge on mobile devices
Closes #1344

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -2231,6 +2231,7 @@ form.avatar-change label.control-label {
 
       h2 {
         margin: 0;
+        padding: 0;
         @include box-shadow;
         @include rounded-corners(16px);
         font-size: 16px;
